--- a/.env.production
+++ b/.env.production
@@ -29,6 +29,7 @@ SENTRY_DSN='https://cbc513d8ef954df7910196a236ed3b6c@sentry.passculture.team/6'
 
 # API
 API_BASE_URL=https://backend.passculture.app
+PCM_API_BASE_URL=https://api.pcm.becknprotocol.io
 RESIZE_IMAGE_ON_DEMAND_URL=https://image-resizing.passculture.app
 GCP_IMAGE_COULD_STORAGE_NAME=passculture-metier-prod-production-assets-fine-grained
 
