--- a/.env.integration
+++ b/.env.integration
@@ -29,6 +29,7 @@ URL_PREFIX=passculture
 FIREBASE_DYNAMIC_LINK_DOMAIN=passcultureappstaging.page.link
 
 # Contentful
+PCM_API_BASE_URL=https://api.pcm-dev.becknprotocol.io
 CONTENTFUL_ACCESS_TOKEN=NazW0Gl-T5S45ZDPRpbS_35KKIvgXrMG2DE3P2i-7fQ
 CONTENTFUL_ENVIRONMENT=testing
 CONTENTFUL_SPACE_ID=2bg01iqy0isv
