--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -7,7 +7,7 @@ apply plugin: "com.google.firebase.firebase-perf"
 project.ext.envConfigFiles = [
         apptestingdebug: ".env.testing",
         apptestingrelease: ".env.testing",
-        developmentdebug: ".env.development",
+        developmentdebug: ".env.integration",
         stagingdebug: ".env.staging",
         stagingrelease: ".env.staging",
         productiondebug: ".env.production",
