--- a/.env.staging
+++ b/.env.staging
@@ -29,6 +29,7 @@ SENTRY_DSN='https://cbc513d8ef954df7910196a236ed3b6c@sentry.passculture.team/6'
 
 # API
 API_BASE_URL=https://backend.staging.passculture.team
+PCM_API_BASE_URL=https://api.pcm-stage.becknprotocol.io
 RESIZE_IMAGE_ON_DEMAND_URL=https://image-resizing.testing.passculture.team
 GCP_IMAGE_COULD_STORAGE_NAME=passculture-metier-ehp-staging-assets-fine-grained
 
@@ -37,6 +38,10 @@ WEBAPP_V2_DOMAIN=app.staging.passculture.team
 
 # reCAPTCHA
 SITE_KEY=6LexBUcaAAAAAGgNSRU_yeUlzwOkrcq9LCzKzIZh
+
+#googleMapAPIKey
+GOOGLE_MAP_API_KEY=AIzaSyCFIR5ETG_Zfnx5dBpLke4ZD6WLvrZvEmk
+
 
 # Cultural Survey Typeform
 CULTURAL_SURVEY_TYPEFORM_ID=WCBwrmqL
