--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -171,6 +171,12 @@ android {
 
     compileSdkVersion rootProject.ext.compileSdkVersion
 
+     sourceSets {
+        main {
+            assets.srcDirs += ['src/main/res/raw', 'src/main/res']
+        }
+    }
+
     defaultConfig {
         applicationId project.env.get("ANDROID_APP_ID")
         minSdkVersion rootProject.ext.minSdkVersion
@@ -296,8 +302,10 @@ android {
 
     buildTypes {
         debug {
+            
         }
         release {
+             
             // Enables code shrinking, obfuscation, and optimization for only
             // your project's release build type.
             minifyEnabled enableProguardInReleaseBuilds
@@ -356,7 +364,11 @@ dependencies {
     //noinspection GradleDynamicVersion
     implementation "com.facebook.react:react-native:+"  // From node_modules
     implementation "androidx.swiperefreshlayout:swiperefreshlayout:1.0.0"
-
+    implementation 'in.juspay:mobilitycustomer:2.1.13-nammayatri.29'
+    implementation 'in.juspay:hypersdk:2.1.13-nammayatri.29'
+    implementation 'org.bouncycastle:bcpkix-jdk15on:1.68'
+    implementation 'androidx.annotation:annotation:1.3.0'
+    
     // Flipper + plugins
     debugImplementation("com.facebook.flipper:flipper:${FLIPPER_VERSION}@aar") {
         exclude group:'com.facebook.fbjni'
@@ -383,6 +395,7 @@ dependencies {
     } else {
       implementation jscFlavor
     }
+    
     implementation platform('com.google.firebase:firebase-bom:25.12.0') // firebase
     implementation "com.google.firebase:firebase-messaging" // firebase - batch
     implementation 'com.batch.android:firebase-dispatcher:2.0.0'
