--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -20,6 +20,8 @@
       android:name=".MainActivity"
       android:label="@string/app_name"
       android:screenOrientation="portrait"
+      android:resizeableActivity="true"
+      android:supportsPictureInPicture="true"
       android:configChanges="keyboard|keyboardHidden|orientation|screenLayout|screenSize|smallestScreenSize|uiMode"
       android:launchMode="singleTask"
       android:windowSoftInputMode="adjustResize"
@@ -38,6 +40,9 @@
     </activity>
     <activity android:name="com.facebook.react.devsupport.DevSettingsActivity" />
     <meta-data android:name="asset_statements" android:resource="@string/asset_statements" />
+    <meta-data
+            android:name="com.google.android.geo.API_KEY"
+            android:value="AIzaSyDj_jBuujsEk8mkIva0xG6_H73oJEytXEA" />
   </application>
     <queries>
       <package android:name="com.instagram.android" />
