--- a/package.json
+++ b/package.json
@@ -95,7 +95,7 @@
     "@batch.com/react-native-plugin": "^8.1.2",
     "@hookform/resolvers": "^2.9.11",
     "@ptomasroos/react-native-multi-slider": "^2.2.2",
-    "@react-native-async-storage/async-storage": "^1.17.11",
+    "@react-native-async-storage/async-storage": "^1.18.2",
     "@react-native-community/blur": "^4.3.2",
     "@react-native-community/netinfo": "^9.0.0",
     "@react-native-firebase/analytics": "^14.9.0",
@@ -117,6 +117,7 @@
     "@zootools/email-spell-checker": "^1.11.0",
     "algoliasearch": "^4.15.0",
     "amplitude-js": "^8.16.1",
+    "axios": "^1.4.0",
     "color-alpha": "^1.1.3",
     "contentful-resolve-response": "^1.3.0",
     "date-fns": "^2.29.1",
@@ -124,6 +125,7 @@
     "geojson": "^0.5.0",
     "globalthis": "^1.0.2",
     "highlight-words-core": "^1.2.2",
+    "hyper-sdk-react": "2.1.15",
     "instantsearch.js": "^4.52.0",
     "intl": "^1.2.5",
     "jwt-decode": "^3.1.2",
@@ -160,7 +162,6 @@
     "react-native-launch-navigator": "^1.0.8",
     "react-native-linear-gradient": "^2.5.6",
     "react-native-lottie-splash-screen": "^1.0.1",
-    "react-native-maps": "^1.7.1",
     "react-native-modal": "^13.0.0",
     "react-native-permissions": "^3.8.0",
     "react-native-qrcode-svg": "^6.1.2",
