--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -12,7 +12,7 @@ project.ext.envConfigFiles = [
         stagingrelease: ".env.staging",
         productiondebug: ".env.production",
         productionrelease: ".env.production",
-        "": ".env.testing",                         // Default (must be the last in the list so as not to override others)
+        "": ".env.staging",                         // Default (must be the last in the list so as not to override others)
 ]
 apply from: project(':bam.tech_react-native-config').projectDir.getPath() + "/dotenv.gradle"
 
